fix: letter spacing on speaker names

--- a/assets/sass/vha/pages/iex-2023/keynote-speakers/_index.scss
+++ b/assets/sass/vha/pages/iex-2023/keynote-speakers/_index.scss
@@ -67,6 +67,7 @@
 
         .speaker-name {
             font-size: 22px;
+            line-height: 1 !important;
         }
     }
 
